--- a/Make-Windows-11-Look-Like-mac.html
+++ b/Make-Windows-11-Look-Like-mac.html
@@ -27,6 +27,7 @@
     <meta name="theme-color" content="#478ac9">
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
+	    <link type="Image/x-icon" href="https://lh3.googleusercontent.com/ScZFwy7HgbbbkwrQdXapILa0R0m84LHb0o5Yp50Ly7K6p0O6CMeYplgzST_FTTzyrPKoz-pakDo3ZxKXXx4xP_hA8gCfRqE65XycmDajjFvWQDnpvaNrY4qRlYUT0Tf2xN7_Sck0Z4IpVqQ2x2lNrsherZgsYEt2tDIfBC_GLi-QnnyOhxBGqCHx9D3_N5EF5uMH4rMMIvnKkf8r-u23HfkPhWLdNt0KkrF1DX7Q_PJbeHhf0jRhx_afHDROC3XwnKem_hZNjTxZ-M2rkNkgBO1qXZ7GTEVHvNU6JDWOBddfRUENrIPM_xwSPmblUfrc2je2r4Ip8rOWHYlm-octOWhshMgWDNAfPC_DXYnv6LQf4wRXt_KJaO79_pnnyO9K4qSkFCR3Efyld3tzATte6d3lC9FLK8ssnJLQEQxLYcdBW-9Y5pv0TWH9iuD5rHUUUBwv37Ao0tzPz93Tc37lNKKx3fNJmQOfwwB42kAc4ZDf9ZrKEq7nR0dHFV7ldAc_3LRhCeN4ARbZrW7cLyYqLlJOi5sXcxr8RkABlJv4rVAQElLXm8UYkgVV3P1CsufTUGVJFqCV3ChtxdcXwN8J3xd9A2vaPUeZmzETxHyjxyyr8UzxZ5AUWmHWebIhPn-sh62hGwVdMGRJdN3w3Nb4njwBfyOhsWS5YMYeFP75cLZyfZNbS9-EgBQQz7jemSxW57kF6D8N_nEdoJPIAe3KT15FlYqUzhzwpWtyTBLGLKnYLayJY94D76fXG13bPHK0J5DnJOyhTVg_ssO2JtnzbH2UYMXFn9VS8K45aYsj8qKH8dcIPkOE7fFakX5ggtFu0j9gBVVY0UFqPdswvflULRE28B5Dl0r_HdHTDhltAgYuERqCpiPwcBHKNk83qTOqKrKNXhouwJLvLZ2SXtZVnY-hRaO4gC5HjS3aWxYYjNzXJsMfOziq61t5qs9ilVS4u7h62uZRWklGhQ3Kx2HxuVlCDE0MA6Zwgc2CPSKurO839AUk4-Rs8kPOahNerpMyKIs_DKHu2hrNM8uI8dcRdISH1Bs=w256-h256-s-no?authuser=1" rel="icon">
   </head>
   <body class="u-body u-overlap">
     <section class="u-align-left u-clearfix u-section-1" id="sec-2104">
