--- a/Help.html
+++ b/Help.html
@@ -30,7 +30,7 @@
   <body class="u-body">
     <section class="u-clearfix u-section-1" id="sec-5398">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-text u-text-1">Привіт, це сайт з канала дмитра сніжка він створений для того щоби вам допомогти.</p>
+        <p class="u-text u-text-1">Hello, this is a site from Dmytro Snezhka's channel, it was created to help you.</p>
       </div>
     </section>
     
